--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
             return previousValue.concat(currentValue);
         }
         
-        var sampleArrayA[
+        var sampleArrayA=[
             ['A1','A2','A3'],
             ['B1','B2','B3'],
             ['C1','C2','C3']
-        ];
+        ]; 
+
+        sampleArrayA.reverse();
         
             var sampleArrayB= sampleArrayA.reduce(toOneDimension);
             for(var counterVar=0;counterVar<sampleArrayB.length;counterVar++){
                 document.write('sampleArrayB['+counterVar +']:');
-                document.write('sampleArrayB[counterVar]);
+                document.write(sampleArrayB[counterVar]);
                 document.write('<br/>');
             }
         </script>
