--- a/debug.html
+++ b/debug.html
@@ -21,10 +21,12 @@
             ['C1', 'C2', 'C3']
         ];
 
+        sampleArrayA.reverse();
+
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
             console.log('sampleArrayB[' + counterVar + ']:');
-            console.log(sampleArrayB[counterVar]);
+            document.write(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
     </script>
