--- a/debug.html
+++ b/debug.html
@@ -26,7 +26,7 @@
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
             console.log('sampleArrayB[' + counterVar + ']:');
-            document.write(sampleArrayB[counterVar]);
+            console.log(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
     </script>
