--- a/debug.html
+++ b/debug.html
@@ -25,8 +25,10 @@
 
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
-            console.log('sampleArrayB[' + counterVar + ']:');
-            console.log(sampleArrayB[counterVar]);
+            document.write('sampleArrayB[' + counterVar + ']:');
+
+            //[counterVar]有り
+            document.write(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
     </script>
