--- a/debug.html
+++ b/debug.html
@@ -27,8 +27,8 @@
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
             document.write('sampleArrayB[' + counterVar + ']:');
 
-            //[counterVar]有り
-            document.write(sampleArrayB[counterVar]);
+            //[counterVar]無し
+            con(sampleArrayB);
             document.write('<br/>');
         }
     </script>
