--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             // 文字列＋０から８まで
             document.write('sampleArrayB[' + counterVar + ']:');
 
-            //sampleArrayAの一次元配列＋↓デバッグして出力されない
+            //sampleArrayAの一次元配列＋? ↓
             document.write(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
