--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             // 文字列＋０から８まで
             document.write('sampleArrayB[' + counterVar + ']:');
 
-            //sampleArrayAの一次元配列＋? ↓
+            //sampleArrayAの一次元配列＋? ↓ ０から始まり、一元配列の長さ（９）未満までsampleArrayAの一次元配列を繰り返す
             document.write(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
