sampleArrayAの配列を逆順にする

--- a/debug.html
+++ b/debug.html
@@ -21,6 +21,9 @@
             ['C1', 'C2', 'C3']
         ];
 
+        //　sampleArrayA.reverse(); →　配列を逆順にする
+        sampleArrayA.reverse();
+
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
             console.log('sampleArrayB[' + counterVar + ']:');
