コメントの編集

--- a/debug.html
+++ b/debug.html
@@ -28,7 +28,7 @@
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
             console.log('sampleArrayB[' + counterVar + ']:');
 
-            //[counterVar]の追加 ← ０から始まり、一元配列の長さ（９）未満まで 一次元配列を繰り返す
+            //[counterVar]の追加 ← ０から始まり、一次元配列の長さ（９）未満まで 一次元配列を繰り返す
             console.log(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
