--- a/index.html
+++ b/index.html
@@ -18,29 +18,32 @@
     -->
 
     <script type="text/javascript">
+
+        //ひとつ前の処理に処理中の配列を結合させる関数
         function toOneDimension(previousValue, currentValue) {
             return previousValue.concat(currentValue);
         }
 
+        //二次元配列
         var sampleArrayA = [
             ['A1', 'A2', 'A3'],
             ['B1', 'B2', 'B3'],
             ['C1', 'C2', 'C3']
         ];
 
-        //　sampleArrayA.reverse(); →　配列を逆順にする
+        // sampleArrayA.reverse(); → 配列を逆順にする
         sampleArrayA.reverse();
 
-        //　sampleArrayA.reduce(toOneDimension); →二次元配列を一次元配列にする
+        // sampleArrayA.reduce(toOneDimension); →二次元配列を一次元配列にして前の処理に結合させたもの
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
 
-        //　counterVar　→０から始まり、一元配列の長さ（９）未満まで1ずつ足していく
+        // counterVar →０から始まり、一元配列の長さ（９）未満まで1ずつ足していく
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
 
             // 文字列＋０から８まで
             document.write('sampleArrayB[' + counterVar + ']:');
 
-            //sampleArrayAの一次元配列＋? ↓ ０から始まり、一元配列の長さ（９）未満までsampleArrayAの一次元配列を繰り返す
+            // ０から始まり、一次元配列の長さ（９）未満までsampleArrayAの一次元配列を繰り返す
             document.write(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
