--- a/debug.html
+++ b/debug.html
@@ -26,10 +26,10 @@
 
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
-            console.log('sampleArrayB[' + counterVar + ']:');
+            document.write('sampleArrayB[' + counterVar + ']:');
 
             //[counterVar]の追加 ← ０から始まり、一次元配列の長さ（９）未満まで 一次元配列を繰り返す
-            console.log(sampleArrayB[counterVar]);
+            document.write(sampleArrayB[counterVar]);
             document.write('<br/>');
         }
     </script>
