console.log( );への変更

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
 
             // 文字列＋０から８まで
-            document.write('sampleArrayB[' + counterVar + ']:');
+            console.log('sampleArrayB[' + counterVar + ']:');
 
             // ０から始まり、一次元配列の長さ（９）未満までsampleArrayAの一次元配列を繰り返す
-            document.write(sampleArrayB[counterVar]);
-            document.write('<br/>');
+            console.log(sampleArrayB[counterVar]);
+            console.log('<br/>');
         }
     </script>
 
