コメントの修正

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript">
 
-        //ひとつ前の処理に処理中の配列を結合させる関数
+        //一つ前の処理に処理中の配列を結合させる関数
         function toOneDimension(previousValue, currentValue) {
             return previousValue.concat(currentValue);
         }
@@ -37,7 +37,7 @@
         // sampleArrayA.reduce(toOneDimension); →二次元配列を一次元配列にして前の処理に結合させたもの
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
 
-        // counterVar →０から始まり、一元配列の長さ（９）未満まで1ずつ足していく
+        // counterVar →０から始まり、一次元配列の長さ（９）未満まで1ずつ足していく
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
 
             // 文字列＋０から８まで
