--- a/index.html
+++ b/index.html
@@ -28,25 +28,34 @@
         var sampleArrayA = [
             ['A1', 'A2', 'A3'],
             ['B1', 'B2', 'B3'],
-            ['C1', 'C2', 'C3']
+            ['C1', 'C2', 'C3'],
         ];
 
-        // sampleArrayA.reverse(); → 配列を逆順にする
-        sampleArrayA.reverse();
+        console.log(sampleArrayA);
+        console.log("ここまでがsampleArrayA");
+
 
         // sampleArrayA.reduce(toOneDimension); →二次元配列を一次元配列にして前の処理に結合させたもの
         var sampleArrayB = sampleArrayA.reduce(toOneDimension);
 
+        console.log(sampleArrayB);
+        console.log("ここまでがsampleArrayB");
+
+
         // counterVar →０から始まり、一次元配列の長さ（９）未満まで1ずつ足していく
         for (var counterVar = 0; counterVar < sampleArrayB.length; counterVar++) {
-
             // 文字列＋０から８まで
-            console.log('sampleArrayB[' + counterVar + ']:');
+
+            document.write('sampleArrayB[' + counterVar + ']:');
 
             // ０から始まり、一次元配列の長さ（９）未満までsampleArrayAの一次元配列を繰り返す
-            console.log(sampleArrayB[counterVar]);
-            console.log('<br/>');
+            document.write(sampleArrayB[counterVar]);
+            console.count(sampleArrayB[counterVar]);
+
+            document.write('<br/>');
         }
+        console.log("繰り返し回数");
+
     </script>
 
 </body>
