デバッグ　修正後

--- a/debug.html
+++ b/debug.html
@@ -22,14 +22,14 @@
 
         //一つ前の処理に処理中の配列を結合させる関数
         function toOneDimension(previousValue, currentValue) {
-            return previousValue.concat(currentValue);
+            return currentValue.concat(previousValue);
         }
 
         //二次元配列
         var sampleArrayA = [
             ['A1', 'A2', 'A3'],
             ['B1', 'B2', 'B3'],
-            ['C1', 'C2', 'C3'],
+            ['C1', 'C2', 'C3']
         ];
 
         console.log(sampleArrayA);
